// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic renders as expected 1`] = `
<svg
  className="events-none icon"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 18,
      "width": 18,
    }
  }
>
  <use
    xlinkHref="#icon-bike"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`extra props renders as expected 1`] = `
<svg
  className="events-none icon"
  data-test="alert-icon"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 18,
      "width": 18,
    }
  }
>
  <use
    xlinkHref="#icon-alert"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`inline renders as expected 1`] = `
<svg
  className="events-none icon inline-block align-t"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 18,
      "width": 18,
    }
  }
>
  <use
    xlinkHref="#icon-check"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`special size applied with a style renders as expected 1`] = `
<svg
  className="events-none icon"
  data-test="alert-icon"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 36,
      "width": 36,
    }
  }
>
  <use
    xlinkHref="#icon-alert"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;

exports[`special size renders as expected 1`] = `
<svg
  className="events-none icon"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": 36,
      "width": 36,
    }
  }
>
  <use
    xlinkHref="#icon-alert"
    xmlnsXlink="http://www.w3.org/1999/xlink"
  />
</svg>
`;
